--- a/src/Components/common/dentistCard/DentistCard.styles.css
+++ b/src/Components/common/dentistCard/DentistCard.styles.css
@@ -1,3 +1,17 @@
 .dentistCard-component{
     display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+  height: 89%;
+  width: 100%;
+  position: absolute;
+  z-index: 1;
+
+}
+
+.star-favs{
+    color: yellow;
+    font-size: 24px;
+    line-height: 1;
 }
