--- a/src/Components/common/dentistCard/DentistCard.styles.css
+++ b/src/Components/common/dentistCard/DentistCard.styles.css
@@ -1,17 +1,66 @@
 .dentistCard-component{
+
+  display: flex;
+  background-color: palevioletred;
+  flex-direction: column;
+  width: 200px;
+  padding: 10px;
+  border: 0.5px solid  darkgray;
+  border-radius: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+
+  .image-container {
+    position: relative;
     display: flex;
-    justify-content: center;
+    .icon-favs{
+      width: 40px;
+      position: absolute;
+      top: -16px;
+      right: -7px;
+    }
+  }
+
+  .info-container{
+    padding: 10px;
+    background-color: #e9acc0;
+    border-radius: 10px;
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    text-decoration: none;
-  height: 89%;
-  width: 100%;
-  position: absolute;
-  z-index: 1;
+    .dentist-name{
+      font-size: 18px;
+      font-weight: bold;
+      text-align: center;
+    }
+    .dentist-username{
+      font-size: 16px;
+      font-style: italic;
+      text-align: center;
+    }
+  }
+
+  .dentistCard-footer{
+    margin-top: auto;
+    button{
+      border-radius: 10px;
+      background-color: rgb(173, 97, 173);
+      color: aliceblue;
+      font-weight: bold;
+      font-size: 14px;
+      padding: 5px;
+
+    }
+  }
 
 }
 
-.star-favs{
-    color: yellow;
-    font-size: 24px;
-    line-height: 1;
+.dentistCard-component img{
+  width: 150px;
+  margin: 0 auto;
+  border-radius: 10px;
+
 }
+
+
+
