--- a/src/Components/layouts/navbar/Navbar.styles.css
+++ b/src/Components/layouts/navbar/Navbar.styles.css
@@ -1,49 +1,33 @@
-/* Contenedor del Navbar */
-.navbar {
+
+.navbar{
+    background-color: purple;
+    padding: 10px;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 20px;
-    background-color: #bb0b0b;
-  }
-  
-  /* Lista de elementos del Navbar */
-  .navbar ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-  }
-  
-  /* Elementos del Navbar */
-  .navbar ul li {
-    margin: 0 10px;
-    padding: 5px 10px;
-    border-radius: 5px;
-    transition: all 0.2s ease-in-out;
-  }
-  
-  /* Botones del Navbar */
-  .navbar ul li a {
-    text-decoration: none;
-    color: #fff;
-    font-weight: bold;
-  }
-  
-  /* Efecto hover para los botones */
-  .navbar ul li:hover {
-    background-color: #444;
-  }
-  
-  /* Media Queries para Responsive Design */
-  @media (max-width: 768px) {
-    .navbar {
-      flex-direction: column;
+    ul {
+        list-style: none;
+        display: flex;
+        padding-left: 0;
+        li{
+            border-right: 1px dashed aliceblue;
+            &:hover{
+                background-color: rgb(153, 81, 172);
+            }
+            &:last-child{
+                border-right: 0;
+            }
+            a{
+                color:aliceblue;
+                text-decoration: none;
+                padding: 10px 20px;
+                &:hover{
+                    color: #61bcd8;
+                }
+            }
+        }
     }
-  
-    .navbar ul {
-      flex-direction: column;
-      align-items: center;
+
+    button{
+        margin-left: auto;
+        padding: 5px;
     }
-  }
-  
+};
