--- a/src/Components/pages/home/Home.style.css
+++ b/src/Components/pages/home/Home.style.css
@@ -2,9 +2,9 @@
     width: 100%;
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
     flex-wrap: wrap;
     gap: 30px;
+    padding: 30px;
 }
 
 
