--- a/src/Components/layouts/layout.styles.css
+++ b/src/Components/layouts/layout.styles.css
@@ -5,5 +5,11 @@
 .layout {
     display: flex;
     flex-direction: column;
-    height: 100vh;
-  };
+    min-height: 100vh;
+    background-color: bisque;
+};
+
+.layout-body{
+  display: flex;
+  justify-content: center;
+}
