--- a/src/Components/common/dentistCard/DentistCard.styles.css
+++ b/src/Components/common/dentistCard/DentistCard.styles.css
@@ -8,51 +8,53 @@
   border: 0.5px solid  darkgray;
   border-radius: 10px;
   font-family: Arial, Helvetica, sans-serif;
+}
 
-  .image-container {
-    position: relative;
-    display: flex;
-    .icon-favs{
-      width: 40px;
-      position: absolute;
-      top: -16px;
-      right: -7px;
-    }
-  }
+.image-container{
+  position: relative;
+  display: flex;
+}
 
-  .info-container{
-    padding: 10px;
-    background-color: #e9acc0;
-    border-radius: 10px;
-    margin: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    .dentist-name{
-      font-size: 18px;
-      font-weight: bold;
-      text-align: center;
-    }
-    .dentist-username{
-      font-size: 16px;
-      font-style: italic;
-      text-align: center;
-    }
-  }
+.icon-favs{
+  width: 40px;
+  position: absolute;
+  top: -16px;
+  right: -7px;
+}
 
-  .dentistCard-footer{
-    margin-top: auto;
-    button{
-      border-radius: 10px;
-      background-color: rgb(173, 97, 173);
-      color: aliceblue;
-      font-weight: bold;
-      font-size: 14px;
-      padding: 5px;
+.info-container{
+  padding: 10px;
+  background-color: #e9acc0;
+  border-radius: 10px;
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-    }
-  }
+.dentist-name{
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+}
 
+.dentist-username{
+  font-size: 16px;
+  font-style: italic;
+  text-align: center;
+}
+
+.dentistCard-footer{
+  margin-top: auto;
+}
+
+.dentistCard-footer button{
+  border-radius: 10px;
+  background-color: rgb(173, 97, 173);
+  color: aliceblue;
+  font-weight: bold;
+  font-size: 14px;
+  padding: 5px;
 }
 
 .dentistCard-component img{
@@ -61,6 +63,3 @@
   border-radius: 10px;
 
 }
-
-
-
