--- a/src/Components/pages/contact/Contact.styles.css
+++ b/src/Components/pages/contact/Contact.styles.css
@@ -7,15 +7,7 @@
     display:flex;
     flex-direction: column;
     margin: 100px;
+    border-radius: 10px;
     
 }
 
-.contact-text strong{
-    color:rgb(87, 8, 87);
-    font-size: 22px;
-}
-
-.contact-text p{
-    color: rgb(189, 37, 189);
-    text-shadow: -1px 1px 10px rgba(0, 0, 0, 0.3)
-}
