--- a/src/Components/common/form/Form.style.css
+++ b/src/Components/common/form/Form.style.css
@@ -1,3 +1,42 @@
 .form-component{
     display: flex;
+    flex-direction: column;
 }
+
+.form-component input{
+        width: 100%;
+        padding: 12px 20px;
+        margin: 8px 0;
+        box-sizing: border-box;
+        border: 2px solid #ccc;
+        border-radius: 10px;
+        font-size: 12px;
+        background-color: rgb(241, 223, 236);
+}
+      
+input:focus {
+        border: 0.5px solid rgb(185, 76, 185);
+        cursor:text;
+}
+
+.form-component button{
+    border-radius: 10px;
+    background-color: #744670;
+    color:antiquewhite;
+    font-weight: bolder;
+    font-style: italic;
+    opacity: 0.65;
+    padding: 5px;
+    
+}
+
+.form-component strong{
+    color:rgb(87, 8, 87);
+    font-size: 22px;
+}
+
+.form-component p{
+    color: rgb(189, 37, 189);
+    text-shadow: -1px 1px 10px rgba(0, 0, 0, 0.3)
+}
+
