--- a/src/Components/common/formCard/FormCard.style.css
+++ b/src/Components/common/formCard/FormCard.style.css
@@ -1,5 +1,5 @@
 .formCard {
-    background-color: 'red'; 
+    background-color: 'pink'; 
     border: '4px solid white';
     padding: '10px';
     margin: '10px 0'
